feat: verify phone via OTP sent to email instead of WhatsApp